<resources>
    <string name="app_name">Trust</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="id">아이디</string>
    <string name="pw">비밀번호</string>
    <string name="name">이름</string>
    <string name="pwChk">비밀번호 확인</string>
    <string name="signUp">회원가입</string>
    <string name="confirm">확인</string>
    <string name="login">로그인</string>
    <string name="autoLogin">자동 로그인</string>
</resources>